# BELLS_leaderboard_mock_up

./: .gitignore  README.md  index.html  leaderboard.html  leaderboard.js  playground.js  pyproject.toml  recommendation.html  recommendation.js  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/worflows/: deploy.yml
data/: adversarial_prompts.csv  benign_non-adversarial.csv  borderline_vanilla.csv  non_adversarial_prompts.csv  safeguard_evaluation_results.csv  safeguard_evaluation_results_synthetic.csv
src/BELLS_leaderboard_mock_up/: app.py  config.py  playground.py  recommender.py
src/BELLS_leaderboard_mock_up/html_version/: leaderboard.html  leaderboard.js  metrics.html  playground.html  playground.js  scripts.js  server.py  styles.css
src/BELLS_leaderboard_mock_up/panel_version/: app.py  playground.py  recommender.py
src/BELLS_leaderboard_mock_up/streamlit_version/: app.py  playground.py  recommender.py
